2010-08-16  Ariya Hidayat  <ariya@sencha.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Shadow blur for rectangle fill
        https://bugs.webkit.org/show_bug.cgi?id=44025

        The blur implementation follows the approximation of Gaussian blur
        with three successive box blurs, working on the alpha channel only.
        (see http://www.w3.org/TR/SVG/filters.html#feGaussianBlur).

        * WebCore.pro: Refer to ContexShadow.* files.
        * platform/graphics/qt/ContextShadow.cpp: Added.
        (WebCore::ContextShadow::ContextShadow):
        (WebCore::ContextShadow::clear):
        (WebCore::blurHorizontal): Box blurs in horizontal direction, working
        on QImage (in-place).
        (WebCore::shadowBlur): Main blur function which just calls the
        above blurHorizontal function twice, once with transposed image
        (equivalent as it would have done vertical box blurs).
        (WebCore::ContextShadow::drawShadowRect):
        * platform/graphics/qt/ContextShadow.h: Added.
        (WebCore::ContextShadow::):
        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContextPlatformPrivate::hasShadow):
        (WebCore::GraphicsContext::restorePlatformState):
        (WebCore::GraphicsContext::fillRect): Use ContextShadow for the shadow.
        (WebCore::GraphicsContext::setPlatformShadow):

2010-08-16  Andras Becsi  <abecsi@webkit.org>

        Rubber-stamped by Gustavo Noronha Silva.

        [GTK] Build fix for MathML code generation.

        No new tests needed.

        * GNUmakefile.am:

2010-08-16  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r65414.
        http://trac.webkit.org/changeset/65414
        https://bugs.webkit.org/show_bug.cgi?id=44055

        GTL & QT tests failing. (Requested by pfeldman on #webkit).

        * inspector/front-end/InjectedScript.js:
        (injectedScriptConstructor):
        (injectedScriptConstructor.):
